Task sent draggable delete

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -444,8 +444,8 @@
   ":assigner has assigned you a new task :task": ":assigner ti je dodijelio novi zadatak :task",
   "Task has been marked as completed": "Zadatak je označen kao završen",
   ":assignee has marked task \":task\" as completed": ":assignee je označio zadatak: \":task\" kao završen",
-  "Approval Request has been denied": "",
-  "Approval Request has been accepted": "",
+  "Approval Request has been denied": "Zahtjev za odobrenje je odbijen",
+  "Approval Request has been accepted": "Zahtjev za odobrenje je odobren",
   ":requestee has denied your request in :related": ":requestee je odbio tvoj zahtjev u :related",
   ":requestee has accepted your request in :related": ":requestee je odobrio tvoj zahtjev u :related",
   "Task has been deleted": "Zadatak je obrisan",
