--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -464,5 +464,7 @@
   "Design Department": "Dizajn odjel",
   "Upload Document": "Unesi datoteku",
   "No print offers created": "Unesite naklade u koraku ranije da biste vidjeli print ponude",
-  "Task Order Approve": "Prioritizacija zadataka"
+  "Task Order Approve": "Prioritizacija zadataka",
+  "Complete": "Završen zadatak",
+  "Edit Employee Roles": "Uredi korisničke razine pristupa"
 }
