Lang fix; upload icon fix

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -124,7 +124,7 @@
   "Layout Design": "Dizajn knj. bloka",
   "Layout": "Layout",
   "First Block Layout": "Prijelom I. bloka",
-  "Cover": "Naslovnica",
+  "Cover": "Ovitak",
   "First Revision": "Prva revizija",
   "Correction": "Korektura",
   "Correction Input": "Unos korekture",
@@ -187,8 +187,8 @@
   "Colors": "Boje",
   "Choose Colors": "Odaberi broj boja",
   "One Colour": "Jedna boja",
-  "Two Colours": "Dvije boja",
-  "Three Colours": "Dvije boja",
+  "Two Colours": "Dvije boje",
+  "Three Colours": "Tri boje",
   "Full Colour": "Full kolor",
   "Fifth Colour": "Peta boja",
   "Colors - First Pages": "Boje - prve stranice",
@@ -209,7 +209,8 @@
   "Film print": "Film print",
   "Blind print": "Slijepi tisak",
   "UV Film": "UV plastifikacija",
-  "Print Offers": "Ponuda tiska",
+  "Print Offers": "Cijena tiska",
+  "Print offer": "Cijena tiska",
   "Download as...": "Preuzmi kao...",
   "Amount": "Iznos",
   "Text Price": "Cijena kartice teksta",
@@ -332,9 +333,9 @@
   "Task Type": "Vrsta zadatka",
   "Created": "Kreiran",
   "Assign employee": "Zaduži osobu",
-  "Cost Approve": "Odobravanje troška",
+  "Approval": "Odobravanje",
   "Upload Files": "Prijenos datoteke",
-  "Delete Expense": "Izbrši trošak",
+  "Delete Expense": "Izbriši trošak",
   "Additional Expenses": "Dodatni troškovi",
   "Task Description": "Opis zadatka",
   "Access Level": "Razina ovlasti",
@@ -467,6 +468,7 @@
   "Task Order Approve": "Prioritizacija zadataka",
   "Complete": "Završen zadatak",
   "Edit Employee Roles": "Uredi korisničke razine pristupa",
-  "Assign employee directly": "Direktno zaduži zaposlenika"
+  "Assign employee directly": "Direktno zaduži zaposlenika",
+  "Add Print Offers": "Priloži ponude za tisak"
 
 }
