Fixes from trello

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -426,7 +426,7 @@
   "has requested an proposition approval": "je zatražio/la odobrenje",
   "Send": "Pošalji",
   "User assigned you new task": "Korisnik vam je dodijelio zadatak",
-  "Approval Request": "Zahtijev za odobrenje",
+  "Approval Request": "Zahtjev za odobrenje",
   "Project": "Projekt",
   "a few seconds ago": "Prije nekoliko trenutaka",
   "an hour ago": "Prije sat vremena",
