--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -125,7 +125,7 @@
   "Layout Design": "Dizajn knj. bloka",
   "Layout": "Layout",
   "First Block Layout": "Prijelom I. bloka",
-  "Cover": "Ovitak",
+  "Cover": "Korice",
   "First Revision": "Prva revizija",
   "Correction": "Korektura",
   "Correction Input": "Unos korekture",
@@ -187,10 +187,10 @@
   "Paper Type": "Vrsta papira",
   "Colors": "Boje",
   "Choose Colors": "Odaberi broj boja",
-  "One Colour": "Jedna boja",
-  "Two Colours": "Dvije boje",
-  "Three Colours": "Tri boje",
-  "Full Colour": "Full kolor",
+  "One Colour": "1/1",
+  "Two Colours": "2/2",
+  "Three Colours": "3/3",
+  "Full Colour": "4/4",
   "Fifth Colour": "Peta boja",
   "Colors - First Pages": "Boje - prve stranice",
   "Colors - Last Pages": "Boje - zadnje stranice",
@@ -300,7 +300,7 @@
   "Show All": "Prikaži sve",
   "Notifications": "Obavijesti",
   "Messages": "Poruke",
-  "Waiting Approval": "Vrijeme čekanja",
+  "Waiting Approval": "Vrijeme čekanja odobrenja",
   "Creation Date": "Vrijeme izrade",
   "Current Status": "Trenutni status",
   "Rejected": "Odbijeno",
