--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -473,5 +473,5 @@
   "Add Print Offers": "Priloži ponude za tisak",
   "approval" : "odobrenje",
   "task" : "zadatak",
-  "document": "dokument",
+  "document": "dokument"
 }
