--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -453,6 +453,8 @@
   ":requestee has accepted your request in :related": ":requestee je odobrio tvoj zahtjev u :related",
   "Task has been deleted": "Zadatak je obrisan",
   ":user has deleted a task :task": ":user je obrisao zadatak :task",
+  "Task Order Approval Request": "Prioritizacija",
+  ":assigner has requested task order approval": ":assigner je podnio zahtjev za odobrenje prioriteta",
   "assignment": "zadatak",
   "cost": "trošak",
   "Reject task priority": "Prihvaćam",
