--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -433,7 +433,7 @@
   "Proposition Approval": "Odobrenje propozicije",
   "Activity Stream": "Obavijesti",
   "Older Activity": "Starije obavijesti",
-  "Save tasks priority": "Spremi prioritete zadataka",
+  "Save tasks priority": "Pošalji na odobrenje",
   ":sender has sent a message to :thread": ":sender je poslao poruku, :thread",
   "Task: :name": "Zadatak: :name",
   "New Thread": "Nova rasprava",
