--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -312,7 +312,7 @@
   "Deleted Propositions": "Izbrisane propozicije",
   "Proposition Archive": "Arhiv propozicija",
   "Completition Date": "Datum završetka",
-  "Create new": "Dodaj novu",
+  "Create new": "Izradi novo",
   "Add new": "Dodaj novo",
   "Propositions": "Propozicije",
   "Users": "Korisnici",
@@ -481,5 +481,6 @@
   "Task order has been approved": "Prioriteti su odobreni",
   "Task order has been rejected": "Prioriteti nisu odobreni",
   ":assignee has approved task order for :employee": ":assignee je odobrio prioritete za :employee",
-  ":assignee has rejected task order for :employee": ":assignee je odbio prioriritete za :employee"
+  ":assignee has rejected task order for :employee": ":assignee je odbio prioriritete za :employee",
+  "Deleted Date": "Datum brisanja"
 }
