Menu reorder; Modal compare switch button position; Translation

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -362,11 +362,13 @@
   "Assign to": "Zadužena osoba",
   "Accept": "Prihvaćam",
   "Reject": "Ne odobravam",
+  "Marketing materials": "Marketinški materijali",
   "Deadline / Priority": "Rok / Razina prioriteta",
   "Proposition Creator": "Kreirao propoziciju",
   "Find employee": "Pronađi osobu",
   "Cost Rejected": "Trošak odbijen. Pošalji ponovno.",
   "Cost Approved": "Trošak odobren",
+  "Cost Approve": "Odobrenje troška",
   "Cost Approval Pending": "Trošak je na odobrenju",
   "Finished": "Dovršeno",
   "Final Documents": "Finalni dokument",
