--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -562,7 +562,9 @@
     "Task order": "Redoslijed zadataka",
     "Find employee to reassign": "Pronađi osobu kojoj prosljeđuješ zadatak",
     "Word document": "Word dokument",
-    "PDF document": "PDF dokument"
+    "PDF document": "PDF dokument",
+    "Proposition has been accepted": "Propozicija je odobrena",
+    "Proposition has been denied": "Propozicija nije odobrena"
     
 
 
