--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -493,29 +493,29 @@
   "passwords.password": "Lozinka mora sadržavati barem 6 znakova i odgovarati unesenoj lozinki",
   "auth.failed": "Uneseni podaci ne odgovaraju našim zapisima",
   "auth.throttle": "Server je preopterećen. Pokušajte ponovno za :seconds sekundi.",
-    "validation.accepted": ":attribute - mora biti prihvaćen", 
-    "validation.active_url": ":attribute nije ispravna adresa", 
-    "validation.after": ":attribute mora biti nakon :date", 
-    "validation.after_or_equal": ":attribute mora biti nakon ili jednak :date", 
-    "validation.alpha": ":attribute može sadržavati samo slova", 
-    "validation.alpha_dash": ":attribute može sadržavati samo slova, brojeve i povlake", 
-    "validation.alpha_num": ":attribute može sadržavati samo slova i brojeve", 
-    "validation.array": ":attribute mora biti niz", 
-    "validation.before": ":attribute mora biti prije :date", 
-    "validation.before_or_equal": ":attribute mora biti prije ili jednak :date", 
+    "validation.accepted": ":attribute - mora biti prihvaćen",
+    "validation.active_url": ":attribute nije ispravna adresa",
+    "validation.after": ":attribute mora biti nakon :date",
+    "validation.after_or_equal": ":attribute mora biti nakon ili jednak :date",
+    "validation.alpha": ":attribute može sadržavati samo slova",
+    "validation.alpha_dash": ":attribute može sadržavati samo slova, brojeve i povlake",
+    "validation.alpha_num": ":attribute može sadržavati samo slova i brojeve",
+    "validation.array": ":attribute mora biti niz",
+    "validation.before": ":attribute mora biti prije :date",
+    "validation.before_or_equal": ":attribute mora biti prije ili jednak :date",
     "validation.between.numeric": ":attribute mora biti između :min i :max",
     "validation.between.file": ":attribute mora biti između :min i :max kilobajta",
     "validation.between.string": ":attribute mora biti između :min i :max znakova",
     "validation.between.array": ":attribute mora imati između :min i :max elemenata",
-    "validation.boolean": ":attribute polje može biti točno ili netočno", 
-    "validation.confirmed": ":attribute ne podudara se s unesenim", 
-    "validation.date": ":attribute nije ispravan datum", 
-    "validation.date_format": ":attribute ne odgovara formatu :format", 
-    "validation.different": ":attribute i :other moraju biti različiti", 
-    "validation.digits": ":attribute mora biti :digits znamenki", 
-    "validation.digits_between": ":attribute mora biti između :min i :max znamenki", 
-    "validation.dimensions": ":attribute - neispravna dimenzija slike", 
-    "validation.distinct": ":attribute ima dupliciranu vrijednost", 
+    "validation.boolean": ":attribute polje može biti točno ili netočno",
+    "validation.confirmed": ":attribute ne podudara se s unesenim",
+    "validation.date": ":attribute nije ispravan datum",
+    "validation.date_format": ":attribute ne odgovara formatu :format",
+    "validation.different": ":attribute i :other moraju biti različiti",
+    "validation.digits": ":attribute mora biti :digits znamenki",
+    "validation.digits_between": ":attribute mora biti između :min i :max znamenki",
+    "validation.dimensions": ":attribute - neispravna dimenzija slike",
+    "validation.distinct": ":attribute ima dupliciranu vrijednost",
     "validation.email": ":attribute mora biti ispravna e-mail adresa",
     "validation.exists": "Odabrani :attribute nije ispravan",
     "validation.file": ":attribute mora biti dokument",
@@ -567,7 +567,5 @@
     "Proposition has been denied": "Propozicija nije odobrena",
     "You are not authorized to view this page": "Niste ovlašteni za pregled ove stranice",
     "Contact proposition's author to gain access": "Kontaktirajte autora ove propozicije za puno ovlaštenje"
-    
-
-
+    "Proposition task": "Propozicijski zadatak"
 }
