--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -566,6 +566,6 @@
     "Proposition has been accepted": "Propozicija je odobrena",
     "Proposition has been denied": "Propozicija nije odobrena",
     "You are not authorized to view this page": "Niste ovlašteni za pregled ove stranice",
-    "Contact proposition's author to gain access": "Kontaktirajte autora ove propozicije za puno ovlaštenje"
+    "Contact proposition's author to gain access": "Kontaktirajte autora ove propozicije za puno ovlaštenje",
     "Proposition task": "Propozicijski zadatak"
 }
