--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -445,7 +445,7 @@
   ":assigner has uploaded a document in :related": ":assigner je prenio dokument u :related",
   "User requested cost approval": "Korisnik je zatražio odobrenje troška",
   ":assigner has requested cost approval on :related": ":assigner je zatražio odobrenje troška na :related",
-  "New task assigned": "Novi zadatak je dodijeljen",
+  "New task assigned": "Imate novi zadatak",
   ":assigner has assigned you a new task :task": ":assigner ti je dodijelio novi zadatak - :task",
   "Task has been marked as completed": "Zadatak je označen kao završen",
   ":assignee has marked task \":task\" as completed": ":assignee je označio zadatak: \":task\" kao završen",
@@ -455,7 +455,7 @@
   ":requestee has accepted your request in :related": ":requestee je odobrio tvoj zahtjev u :related",
   "Task has been deleted": "Zadatak je obrisan",
   ":user has deleted a task :task": ":user je obrisao zadatak :task",
-  "Task Order Approval Request": "Prioritizacija",
+  "Task order approval request": "Prioritizacija",
   ":assigner has requested task order approval": ":assigner je podnio zahtjev za odobrenje prioriteta",
   "assignment": "zadatak",
   "Assignment": "zadatak",
@@ -567,5 +567,9 @@
     "Proposition has been denied": "Propozicija nije odobrena",
     "You are not authorized to view this page": "Niste ovlašteni za pregled ove stranice",
     "Contact proposition's author to gain access": "Kontaktirajte autora ove propozicije za puno ovlaštenje",
-    "Proposition task": "Propozicijski zadatak"
+    "Proposition task": "Propozicijski zadatak",
+    "Other Author Expenses": "Ostali autorski troškovi",
+    "In Kn": "U kunama",
+    "Choose your option": "Odaberi",
+    "This page in not available because there is data missing": "Stranica nije dostupna jer nedostaju podaci za njen prikaz"
 }
