--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -571,5 +571,7 @@
     "Other Author Expenses": "Ostali autorski troškovi",
     "In Kn": "U kunama",
     "Choose your option": "Odaberi",
-    "This page in not available because there is data missing": "Stranica nije dostupna jer nedostaju podaci za njen prikaz"
+    "This page in not available because there is data missing": "Stranica nije dostupna jer nedostaju podaci za njen prikaz",
+    "Task has been resent": "Zadatak je ponovno poslan",
+    ":assigner has reactivated a task :task": ":assigner je zatražio doradu zadatka - :task"
 }
