--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -476,11 +476,11 @@
   "Edit Employee Roles": "Uredi korisničke razine pristupa",
   "Assign employee directly": "Direktno zaduži zaposlenika",
   "Add Print Offers": "Priloži ponude za tisak",
-  "approval" : "odobrenje",
-  "task" : "zadatak",
+  "approval": "odobrenje",
+  "task": "zadatak",
   "document": "dokument",
   "message": "poruke",
-  "thread" : "rasprava",
+  "thread": "rasprava",
   "Task order has been approved": "Prioriteti su odobreni",
   "Task order has been rejected": "Prioriteti nisu odobreni",
   ":assignee has approved task order for :employee": ":assignee je odobrio prioritete za :employee",
@@ -493,90 +493,93 @@
   "passwords.password": "Lozinka mora sadržavati barem 6 znakova i odgovarati unesenoj lozinki",
   "auth.failed": "Uneseni podaci ne odgovaraju našim zapisima",
   "auth.throttle": "Server je preopterećen. Pokušajte ponovno za :seconds sekundi.",
-    "validation.accepted": ":attribute - mora biti prihvaćen",
-    "validation.active_url": ":attribute nije ispravna adresa",
-    "validation.after": ":attribute mora biti nakon :date",
-    "validation.after_or_equal": ":attribute mora biti nakon ili jednak :date",
-    "validation.alpha": ":attribute može sadržavati samo slova",
-    "validation.alpha_dash": ":attribute može sadržavati samo slova, brojeve i povlake",
-    "validation.alpha_num": ":attribute može sadržavati samo slova i brojeve",
-    "validation.array": ":attribute mora biti niz",
-    "validation.before": ":attribute mora biti prije :date",
-    "validation.before_or_equal": ":attribute mora biti prije ili jednak :date",
-    "validation.between.numeric": ":attribute mora biti između :min i :max",
-    "validation.between.file": ":attribute mora biti između :min i :max kilobajta",
-    "validation.between.string": ":attribute mora biti između :min i :max znakova",
-    "validation.between.array": ":attribute mora imati između :min i :max elemenata",
-    "validation.boolean": ":attribute polje može biti točno ili netočno",
-    "validation.confirmed": ":attribute ne podudara se s unesenim",
-    "validation.date": ":attribute nije ispravan datum",
-    "validation.date_format": ":attribute ne odgovara formatu :format",
-    "validation.different": ":attribute i :other moraju biti različiti",
-    "validation.digits": ":attribute mora biti :digits znamenki",
-    "validation.digits_between": ":attribute mora biti između :min i :max znamenki",
-    "validation.dimensions": ":attribute - neispravna dimenzija slike",
-    "validation.distinct": ":attribute ima dupliciranu vrijednost",
-    "validation.email": ":attribute mora biti ispravna e-mail adresa",
-    "validation.exists": "Odabrani :attribute nije ispravan",
-    "validation.file": ":attribute mora biti dokument",
-    "validation.filled": ":attribute mora imati neku vrijednost",
-    "validation.image": ":attribute mora biti fotografija",
-    "validation.in": ":Odabrani :attribute nije ispravan",
-    "validation.in_array": ":attribute polje ne postoji u :other",
-    "validation.integer": ":attribute mora biti cijeli broj",
-    "validation.ip": ":attribute mora biti ispravna IP adresa",
-    "validation.ipv4": ":attribute mora biti ispravna IPv4 adresa",
-    "validation.ipv6": ":attribute mora biti ispravna IPv6 adresa",
-    "validation.json": ":attribute mora biti ispravni JSON format",
-    "validation.max.numeric": ":attribute ne smije biti veći od :max",
-    "validation.max.file": ":attribute ne smije biti veći od :max kilobajta",
-    "validation.max.string": ":attribute ne smije biti veći od :max znakova",
-    "validation.max.array": ":attribute ne smije imati više od :max elemenata",
-    "validation.mimes": ":attribute mora biti :values format datoteke",
-    "validation.mimetypes": ":attribute mora biti :values format datoteke",
-    "validation.min.numeric": ":attribute mora imati najmanje :min",
-    "validation.min.file": ":attribute mora imati najmanje :in kilobajta",
-    "validation.min.string": ":attribute mora imati najmanje :min znakova",
-    "validation.min.array": ":attribute mora sadržavati najmanje :min elemenata",
-    "validation.not_in": "Odabrani :attribute je neispravan",
-    "validation.numeric": ":attribute mora biti znamenka",
-    "validation.present": ":attribute polje mora biti prikazano",
-    "validation.regex": ":attribute je neispravan",
-    "validation.required": ":attribute polje je obvezno",
-    "validation.required_if": ":attribute polje je obvezno ako :other is :value",
-    "validation.required_unless": ":attribute polje je obvezno osim ako :other je :values",
-    "validation.required_with": ":attribute polje je obvezno kada je :value prikazan",
-    "validation.required_with_all": ":attribute polje je obvezno kada je :value prikazan",
-    "validation.required_without": ":attribute polje je obvezno kada :value nije prikazan",
-    "validation.required_without_all": ":attribute polje je obvezno kada niti jedan :value nije prikazan",
-    "validation.same": ":attribute an :other moraju se podudarati",
-    "validation.size.numeric": ":attribute mora biti :size",
-    "validation.size.file": ":attribute mora imati :size kilobajta",
-    "validation.size.string": ":attribute mora imati :size znakova",
-    "validation.size.array": ":attribute mora sadržavati :size elemenata",
-    "validation.string": ":attribute mora biti niz podataka",
-    "validation.timezone": ":attribute mora biti ispravna vremenska zona",
-    "validation.unique": ":attribute je zauzeto",
-    "validation.uploaded": ":attribute nije preneseno",
-    "validation.url": ":attribute format nije ispravan",
-    "Task order": "Redoslijed zadataka",
-    "Find employee to reassign": "Pronađi osobu kojoj prosljeđuješ zadatak",
-    "Word document": "Word dokument",
-    "PDF document": "PDF dokument",
-    "Proposition has been accepted": "Propozicija je odobrena",
-    "Proposition has been denied": "Propozicija nije odobrena",
-    "You are not authorized to view this page": "Niste ovlašteni za pregled ove stranice",
-    "Contact proposition's author to gain access": "Kontaktirajte autora ove propozicije za puno ovlaštenje",
-    "Proposition task": "Propozicijski zadatak",
-    "Other Author Expenses": "Ostali autorski troškovi",
-    "In Kn": "U kunama",
-    "Choose your option": "Odaberi",
-    "This page in not available because there is data missing": "Stranica nije dostupna jer nedostaju podaci za njen prikaz",
-    "Task has been resent": "Zadatak je ponovno poslan",
-    ":assigner has reactivated a task :task": ":assigner je zatražio doradu zadatka - :task",
-    "Editor": "Urednik",
-    "No data": "Nema podataka",
-    "Stitch Binding": "Šivano",
-    "Glue Binding": "Ljepljeno",
-    "Clasp Binding": "Kopčano"
+  "validation.accepted": ":attribute - mora biti prihvaćen",
+  "validation.active_url": ":attribute nije ispravna adresa",
+  "validation.after": ":attribute mora biti nakon :date",
+  "validation.after_or_equal": ":attribute mora biti nakon ili jednak :date",
+  "validation.alpha": ":attribute može sadržavati samo slova",
+  "validation.alpha_dash": ":attribute može sadržavati samo slova, brojeve i povlake",
+  "validation.alpha_num": ":attribute može sadržavati samo slova i brojeve",
+  "validation.array": ":attribute mora biti niz",
+  "validation.before": ":attribute mora biti prije :date",
+  "validation.before_or_equal": ":attribute mora biti prije ili jednak :date",
+  "validation.between.numeric": ":attribute mora biti između :min i :max",
+  "validation.between.file": ":attribute mora biti između :min i :max kilobajta",
+  "validation.between.string": ":attribute mora biti između :min i :max znakova",
+  "validation.between.array": ":attribute mora imati između :min i :max elemenata",
+  "validation.boolean": ":attribute polje može biti točno ili netočno",
+  "validation.confirmed": ":attribute ne podudara se s unesenim",
+  "validation.date": ":attribute nije ispravan datum",
+  "validation.date_format": ":attribute ne odgovara formatu :format",
+  "validation.different": ":attribute i :other moraju biti različiti",
+  "validation.digits": ":attribute mora biti :digits znamenki",
+  "validation.digits_between": ":attribute mora biti između :min i :max znamenki",
+  "validation.dimensions": ":attribute - neispravna dimenzija slike",
+  "validation.distinct": ":attribute ima dupliciranu vrijednost",
+  "validation.email": ":attribute mora biti ispravna e-mail adresa",
+  "validation.exists": "Odabrani :attribute nije ispravan",
+  "validation.file": ":attribute mora biti dokument",
+  "validation.filled": ":attribute mora imati neku vrijednost",
+  "validation.image": ":attribute mora biti fotografija",
+  "validation.in": ":Odabrani :attribute nije ispravan",
+  "validation.in_array": ":attribute polje ne postoji u :other",
+  "validation.integer": ":attribute mora biti cijeli broj",
+  "validation.ip": ":attribute mora biti ispravna IP adresa",
+  "validation.ipv4": ":attribute mora biti ispravna IPv4 adresa",
+  "validation.ipv6": ":attribute mora biti ispravna IPv6 adresa",
+  "validation.json": ":attribute mora biti ispravni JSON format",
+  "validation.max.numeric": ":attribute ne smije biti veći od :max",
+  "validation.max.file": ":attribute ne smije biti veći od :max kilobajta",
+  "validation.max.string": ":attribute ne smije biti veći od :max znakova",
+  "validation.max.array": ":attribute ne smije imati više od :max elemenata",
+  "validation.mimes": ":attribute mora biti :values format datoteke",
+  "validation.mimetypes": ":attribute mora biti :values format datoteke",
+  "validation.min.numeric": ":attribute mora imati najmanje :min",
+  "validation.min.file": ":attribute mora imati najmanje :in kilobajta",
+  "validation.min.string": ":attribute mora imati najmanje :min znakova",
+  "validation.min.array": ":attribute mora sadržavati najmanje :min elemenata",
+  "validation.not_in": "Odabrani :attribute je neispravan",
+  "validation.numeric": ":attribute mora biti znamenka",
+  "validation.present": ":attribute polje mora biti prikazano",
+  "validation.regex": ":attribute je neispravan",
+  "validation.required": ":attribute polje je obvezno",
+  "validation.required_if": ":attribute polje je obvezno ako :other is :value",
+  "validation.required_unless": ":attribute polje je obvezno osim ako :other je :values",
+  "validation.required_with": ":attribute polje je obvezno kada je :value prikazan",
+  "validation.required_with_all": ":attribute polje je obvezno kada je :value prikazan",
+  "validation.required_without": ":attribute polje je obvezno kada :value nije prikazan",
+  "validation.required_without_all": ":attribute polje je obvezno kada niti jedan :value nije prikazan",
+  "validation.same": ":attribute an :other moraju se podudarati",
+  "validation.size.numeric": ":attribute mora biti :size",
+  "validation.size.file": ":attribute mora imati :size kilobajta",
+  "validation.size.string": ":attribute mora imati :size znakova",
+  "validation.size.array": ":attribute mora sadržavati :size elemenata",
+  "validation.string": ":attribute mora biti niz podataka",
+  "validation.timezone": ":attribute mora biti ispravna vremenska zona",
+  "validation.unique": ":attribute je zauzeto",
+  "validation.uploaded": ":attribute nije preneseno",
+  "validation.url": ":attribute format nije ispravan",
+  "Task order": "Redoslijed zadataka",
+  "Find employee to reassign": "Pronađi osobu kojoj prosljeđuješ zadatak",
+  "Word document": "Word dokument",
+  "PDF document": "PDF dokument",
+  "Proposition has been accepted": "Propozicija je odobrena",
+  "Proposition has been denied": "Propozicija nije odobrena",
+  "You are not authorized to view this page": "Niste ovlašteni za pregled ove stranice",
+  "Contact proposition's author to gain access": "Kontaktirajte autora ove propozicije za puno ovlaštenje",
+  "Proposition task": "Propozicijski zadatak",
+  "Other Author Expenses": "Ostali autorski troškovi",
+  "In Kn": "U kunama",
+  "Choose your option": "Odaberi",
+  "This page in not available because there is data missing": "Stranica nije dostupna jer nedostaju podaci za njen prikaz",
+  "Task has been resent": "Zadatak je ponovno poslan",
+  ":assigner has reactivated a task :task": ":assigner je zatražio doradu zadatka - :task",
+  "Editor": "Urednik",
+  "No data": "Nema podataka",
+  "Stitch Binding": "Šivano",
+  "Glue Binding": "Ljepljeno",
+  "Clasp Binding": "Kopčano",
+  "Successfully approved": "Uspješno odobreno",
+  "There was an error. Please try again": "Došlo je do pogreške. Probajte ponovo.",
+  "Successfully requested": "Uspješno zatraženo"
 }
