--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -581,5 +581,13 @@
   "Clasp Binding": "Kopčano",
   "Successfully approved": "Uspješno odobreno",
   "There was an error. Please try again": "Došlo je do pogreške. Probajte ponovo.",
-  "Successfully requested": "Uspješno zatraženo"
+  "Successfully requested": "Uspješno zatraženo",
+  "Whoops!": "Poštovani,",
+  "Hello!": "Poštovani,",
+  "Regards,": "Lijepi pozdrav,",
+  "If you’re having trouble clicking the ':actionText' button, copy and paste the URL below into your web browser:": "Ako imate poteškoća pri otvaranju stranice preko gumba \":actionText\", kopirajte i zalijepite ovaj link u vaš internet preglednik:",
+  "You are receiving this email because we received a password reset request for your account.": "primili ste ovu poruku jer smo dobili zahtjev za oporavak Vaše lozinke.",
+  "Reset Password": "Oporavi lozinku",
+  "If you did not request a password reset, no further action is required.": "Ako niste zatražili poništenje lozinke, zanemarite ovaj email.",
+  "All rights reserved.": "Sva prava pridržana."
 }
