Notification read all option; lang

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -17,7 +17,7 @@
   "Search...": "Traži...",
   "Add New Role": "Dodaj novu rolu",
   "Add New Department": "Dodaj novi odjel",
-  "Title": "Naziv",
+  "Title": "Naslov",
   "Description": "Opis",
   "Enter Description": "Unesi opis",
   "Add New User": "Dodaj novog korisnika",
@@ -92,8 +92,8 @@
   "Assigner": "Zadatak kreirao",
   "Project data": "Podaci o projektu",
   "Project name": "Naziv projekta",
-  "Project number": "Broj projekta",
-  "Additional project number": "Dodatni broj projekta",
+  "Project number": "Šifra",
+  "Additional project number": "Dodatna šifra",
   "Note": "Napomena",
   "Start": "Početna",
   "Basic Data": "Osnovni podaci",
@@ -296,7 +296,7 @@
   "Cover - JPG format": "Naslovnica - JPG format",
   "Cover - PSD format": "Naslovnica - PSD format",
   "Cover - PDF format": "Naslovnica - PDF format",
-  "Leaflet": "Letak",
+  "Leaflet": "Marketinški materijali",
   "Show All": "Prikaži sve",
   "Notifications": "Obavijesti",
   "Messages": "Poruke",
