Style fix; Lang

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -141,7 +141,8 @@
   "Marketing": "Marketing",
   "Marketing Expense": "Marketinški trošak",
   "Author": "Autor",
-  "Add New Author": "Dodaj novog autora",
+  "Search for Author": "Pretraži autore",
+  "Add New Author": "Unesi novog autora",
   "Concept": "Koncept",
   "Manuscript": "Rukopis",
   "Ordered": "Naručen",
