--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -105,7 +105,7 @@
   "Authors Expenses": "Autorski troškovi",
   "Production Expense": "Produkcijski troškovi",
   "Distribution Expense": "Distribucijski troškovi",
-  "Layout Expense": "Trošak prijeloma",
+  "Layout Expense": "Brutto trošak prijeloma",
   "Deadline": "Rok",
   "Calculation": "Kalkulacija",
   "Text Preparation": "Priprema teksta",
@@ -192,6 +192,10 @@
   "Two Colours": "2/2",
   "Three Colours": "3/3",
   "Full Colour": "4/4",
+  "Only One Color": "1/0",
+  "Only Two Color": "2/0",
+  "Only Three Color": "3/0",
+  "Only Four Color": "4/0",
   "Fifth Colour": "Peta boja",
   "Colors - First Pages": "Boje - prve stranice",
   "Colors - Last Pages": "Boje - zadnje stranice",
@@ -233,7 +237,7 @@
   "PowerPoint Presentation": "PowerPoint prezentacija",
   "Aditional Expenses": "Dodatni troškovi",
   "Distribution Margin": "Distribucijski trošak",
-  "Design Expense": "Trošak dizajna",
+  "Design Expense": "Brutto trošak dizajna",
   "Layout Complexity": "Kompleksnost prijeloma",
   "Design Complexity": "Zahtjevnost dizajna",
   "Select Date": "Odabir datuma",
@@ -297,6 +301,7 @@
   "Cover - JPG format": "Naslovnica - JPG format",
   "Cover - PSD format": "Naslovnica - PSD format",
   "Cover - PDF format": "Naslovnica - PDF format",
+  "Free preview PDF": "PDF za listalicu",
   "Leaflet": "Marketinški materijali",
   "Show All": "Prikaži sve",
   "Notifications": "Obavijesti",
