If I don't commit I didn't do anything

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -93,7 +93,7 @@
   "Project data": "Podaci o projektu",
   "Project name": "Naziv projekta",
   "Project number": "Šifra",
-  "Additional project number": "Dodatna šifra",
+  "Additional project number": "ISBN broj",
   "Note": "Napomena",
   "Start": "Početna",
   "Basic Data": "Osnovni podaci",
@@ -116,18 +116,18 @@
   "Reviews": "Recenzije",
   "Lecture": "Lektura",
   "Technical Correction": "Tehnička korektura",
-  "Final Review": "Završna korektura",
+  "Final Review": "Priprema teksta za prijelom",
   "Expenses": "Troškovi",
   "Expense": "Trošak",
   "Compare": "Usporedba",
   "Design": "Dizajn",
   "Cover Design": "Dizajn naslovnice",
   "Layout Design": "Dizajn knj. bloka",
-  "Layout": "Layout",
+  "Layout": "Prijelom",
   "First Block Layout": "Prijelom I. bloka",
-  "Cover": "Korice",
+  "Cover": "Naslovnica",
   "First Revision": "Prva revizija",
-  "Correction": "Korektura",
+  "Tehnical Correction": "Tehnička korektura",
   "Correction Input": "Unos korekture",
   "Revisions": "Revizije",
   "Final Price": "Konačna cijena",
@@ -188,6 +188,7 @@
   "Paper Type": "Vrsta papira",
   "Colors": "Boje",
   "Choose Colors": "Odaberi broj boja",
+  "No Colour": "0/0",
   "One Colour": "1/1",
   "Two Colours": "2/2",
   "Three Colours": "3/3",
@@ -197,23 +198,24 @@
   "Only Three Color": "3/0",
   "Only Four Color": "4/0",
   "Fifth Colour": "Peta boja",
-  "Colors - First Pages": "Boje - prve stranice",
-  "Colors - Last Pages": "Boje - zadnje stranice",
+  "Colors - First Pages": "Boje - predlist",
+  "Colors - Last Pages": "Boje - zalist",
   "Additional Work": "Dodatni zahtjevi",
-  "Hard/Soft Cover": "Tvrdi/meki uvez",
+  "Hard/Soft Cover": "Vrsta korica",
   "Book binding": "Povezivanje stranica",
   "None": "Ništa",
-  "Hard Cover": "Tvrdi uvez",
-  "Soft Cover": "Meki uvez",
-  "Hard and Soft Cover": "Tvrdi i meki uvez",
+  "Hard Cover": "Tvrde korice",
+  "Soft Cover": "Meke korice",
+  "Flex Cover": "Fleksibilne koice",
+  "Hard and Soft Cover": "Tvrde i meke korice",
   "Hard book binding": "Tvrdo povezivanje",
   "Soft book binding": "Meko povezivanje",
   "Spiral book binding": "Spirala",
   "Plastification": "Plastifikacija",
   "Glossy plastification": "Sjajna plastifikacija",
   "Mat plastification": "Mat plastifikacija",
-  "Film print": "Film print",
-  "Blind print": "Slijepi tisak",
+  "Film print": "Folijotisak",
+  "Blind Print": "Blindruck",
   "UV Film": "UV plastifikacija",
   "Print Offers": "Cijena tiska",
   "Print offer": "Cijena tiska",
@@ -240,14 +242,14 @@
   "Design Expense": "Brutto trošak dizajna",
   "Layout Complexity": "Kompleksnost prijeloma",
   "Design Complexity": "Zahtjevnost dizajna",
-  "Select Date": "Odabir datuma",
+  "Select Date": "Rok izrade",
   "Priority": "Prioritetna važnost",
   "High": "Visoka",
   "Medium": "Srednja",
   "Low": "Niska",
   "Total Cost": "Ukupni trošak",
   "Direct Cost Cover": "Pokrivanje direktnih troškova",
-  "Complete Cost Cover": "Pokrivanje svih troškova",
+  "Complete Cost Cover": "Pokrivanje cijene koštanja",
   "Number of Sold Copies": "Broj prodanih primjeraka",
   "Price Proposal": "Prijedlog cijene",
   "Initial Document": "Početni dokument",
@@ -336,7 +338,7 @@
   "Completion Date": "Datum završetka",
   "Send on Approval": "Pošalji na odobrenje",
   "New Editions": "Nova izdanja",
-  "Layout and Design budget": "Layout i dizajn trošak",
+  "Layout and Design budget": "Prijelom i dizajn trošak",
   "Task Type": "Vrsta zadatka",
   "Created": "Kreiran",
   "Assign employee": "Zaduži osobu",
@@ -470,9 +472,9 @@
   "Approve task priority": "Prihvaćam",
   "Today": "Danas",
   "Graphics": "Grafički odjel",
-  "Editorial-1": "Urednički odjel 1",
-  "Editorial-2": "Urednički odjel 2",
-  "Editorial-3": "Urednički odjel 3",
+  "Editorial-1": "Redakcija 1",
+  "Editorial-2": "Redakcija 2",
+  "Editorial-3": "Redakcija 3",
   "Management": "Uprava",
   "Design Department": "Dizajn odjel",
   "Upload Document": "Unesi datoteku",
@@ -577,7 +579,7 @@
   "Other Author Expenses": "Ostali autorski troškovi",
   "In Kn": "U kunama",
   "Choose your option": "Odaberi",
-  "This page in not available because there is data missing": "Stranica nije dostupna jer nedostaju podaci za njen prikaz",
+  "This page in not available because there is data missing": "Pod sekcijom *tehnički podaci* moraju biti unesene naklade da bi se prikazao sadržaj ove stranice",
   "Task has been resent": "Zadatak je ponovno poslan",
   ":assigner has reactivated a task :task": ":assigner je zatražio doradu zadatka - :task",
   "Editor": "Urednik",
@@ -596,5 +598,9 @@
   "Reset Password": "Oporavi lozinku",
   "If you did not request a password reset, no further action is required.": "Ako niste zatražili poništenje lozinke, zanemarite ovaj email.",
   "All rights reserved.": "Sva prava pridržana.",
-  "Permanently Delete": "Trajno izbriši"
+  "Permanently Delete": "Trajno izbriši",
+  "Varnishe": "Lakiranje",
+  "Glossy Varnishe": "Sjajno lakiranje",
+  "Mat Varnishe": "Mat lakiranje",
+  "Author Questionnaire": "Autorski upitnik"
 }
