Proposition > Tehnical_data -- Add "Cover paper (ovitak)"

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -105,7 +105,9 @@
   "Authors Expenses": "Autorski troškovi",
   "Production Expense": "Produkcijski troškovi",
   "Distribution Expense": "Distribucijski troškovi",
-  "Layout Expense": "Brutto trošak prijeloma",
+  "Layout Expense": "Prijelom",
+  "Cover Paper": "Ovitak",
+  "Layout Brutto Expense": "Brutto trošak prijeloma",
   "Deadline": "Rok",
   "Calculation": "Kalkulacija",
   "Text Preparation": "Priprema teksta",
