UpladDocumnets -- two buttons added

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -258,6 +258,8 @@
   "Final Document": "Završni dokument",
   "Upload": "Unesi datoteku",
   "Done": "Gotovo",
+  "Skip Step": "Preskoči korak",
+  "Step Done": "Dovršeno",
   "Layout and Design": "Prijelom i dizajn",
   "Budget vs. Expenses": "Početni i stvarni troškovi",
   "Budget": "Budžet (početni troškovi)",
