--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -608,5 +608,5 @@
   "Glossy Varnishe": "Sjajno lakiranje",
   "Mat Varnishe": "Mat lakiranje",
   "Author Questionnaire": "Autorski upitnik",
-  "Request Code" : "Zatraži šifru"
+  "Request Code..." : "Zatraži šifru"
 }
