Retrieve book tenders and show them

--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -613,5 +613,6 @@
   "Final Print Price": "Konačna cijena tiska",
   "User has skipped this step": "Korak je preskočen",
   "User has finished this step": "Korak je završen",
-  "Cover is missing": "Nedostaje fotografija naslovnice"
+  "Cover is missing": "Nedostaje fotografija naslovnice",
+  "Tender type": "Vrsta natječaja"
 }
