--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -614,5 +614,6 @@
   "User has skipped this step": "Korak je preskočen",
   "User has finished this step": "Korak je završen",
   "Cover is missing": "Nedostaje fotografija naslovnice",
-  "Tender type": "Vrsta natječaja"
+  "Tender type": "Vrsta natječaja",
+  "View": "Pregledajte"
 }
