--- a/src/translations/hr.json
+++ b/src/translations/hr.json
@@ -134,6 +134,7 @@
   "Revisions": "Revizije",
   "Final Price": "Konačna cijena",
   "Price Definition": "Određivanje cijene",
+  "Correction": "Korektura",
   "Prepress": "Priprema",
   "Print Proof": "Probni otisci",
   "Print Proof Correction": "Ispravak probnih otisaka",
@@ -484,7 +485,7 @@
   "Upload Document": "Unesi datoteku",
   "No print offers created": "Unesite naklade u koraku ranije da biste vidjeli print ponude",
   "Task Order Approve": "Prioritizacija zadataka",
-  "Complete": "Završen zadatak",
+  "Complete": "Zadatak izvršen",
   "Edit Employee Roles": "Uredi korisničke razine pristupa",
   "Assign employee directly": "Direktno zaduži zaposlenika",
   "Add Print Offers": "Priloži ponude za tisak",
@@ -586,7 +587,7 @@
   "You need to enter circulations under section *technical data* in order to enable this screen": "Pod sekcijom *tehnički podaci* moraju biti unesene naklade da bi se prikazao sadržaj ove stranice",
   "You need to select the book group in order to enable this screen": "Morate odabrati grupu kojoj propozicija pripada da bi omogućili ovu stranicu",
   "Task has been resent": "Zadatak je ponovno poslan",
-  ":assigner has reactivated a task :task": ":assigner je zatražio doradu zadatka - :task",
+  ":assigner has reactivated a task :task": ":assigner je reaktivirao zadatak :task",
   "Editor": "Urednik",
   "No data": "Nema podataka",
   "Stitch Binding": "Šivano",
@@ -615,5 +616,6 @@
   "User has finished this step": "Korak je završen",
   "Cover is missing": "Nedostaje fotografija naslovnice",
   "Tender type": "Vrsta natječaja",
-  "View": "Pregledajte"
+  "View": "Pregledajte",
+  "Resend": "Ponovo pošalji zadatak"
 }
